对话推荐提示词优化，输出逻辑优化